# gofr-plot

./: .dockerignore  .gitignore  .gitmodules  :memory:  MCP_README.md  README.md  gofr-plot.env  gplot.env  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: config.py  main.py  main_mcp.py  main_mcpo.py  main_web.py  mcp_responses.py  mcp_server.py  models.py  render.py  settings.py  web_server.py
app/auth/: __init__.py  middleware.py  service.py
app/exceptions/: __init__.py
app/graph_params/: __init__.py  params.py
app/handlers/: __init__.py  bar.py  base.py  line.py  scatter.py
app/logger/: __init__.py  console_logger.py  default_logger.py  interface.py
app/mcp_server/: mcp_server.py
app/mcpo_server/: wrapper.py
app/render/: renderer.py
app/startup/: __init__.py  auth_config.py
app/storage/: __init__.py  base.py  common_adapter.py  file_storage.py  file_storage_v2.py
app/themes/: README.md  __init__.py  base.py  bizdark.py  bizlight.py  dark.py  light.py
app/validation/: __init__.py  models.py  validator.py
app/web_server/: web_server.py
data/: .gitignore
docker/: Dockerfile.backup  Dockerfile.base  Dockerfile.dev  Dockerfile.n8n  Dockerfile.prod  README.md  README_N8N_MCP.md  build-base.sh  build-dev.sh  build-prod.sh  docker-compose.yml  entrypoint-dev.sh  entrypoint-prod.sh  run-dev.sh  run-n8n.sh  run-openwebui.sh  run-prod.sh  stop-prod.sh
docs/: ALIAS.md  AUTHENTICATION.md  BACKUP.md  DATA_PERSISTENCE.md  DOCKER.md  GRAPH_PARAMS.md  INDEX.md  LOGGER.md  MCP_README.md  N8N_GUIDE.md  PING.md  PROXY_MODE.md  README_N8N_MCP.md  RENDER.md  SCRIPTS.md  STORAGE.md  TESTING.md  TEST_AUTH.md  TEST_MCP.md  TEST_WEB.md  THEMES.md  VSCODE_LAUNCH_CONFIGURATIONS.md
docs/archive/debugging/: TEST_DEBUGGING_LEARNINGS.md
docs/archive/plans/: IMPROVEMENT_PLAN.md  REFRACTOR_PLAN.md
docs/archive/snapshots/: TEST_COVERAGE_MULTI_DATASET.md
examples/: mcp_axis_controls_example.py
logs/: gofr-plot_tokens_test.json
scripts/: backup_now.sh  mcpo_wrapper.sh  restart_servers.sh  restore_backup.sh  run_mcp.sh  run_mcpo.sh  run_tests.sh  run_web.sh  token_manager.py
test/: conftest.py  test_settings.py  test_storage_architecture.py
test/auth/: test_authentication.py  test_dependency_injection.py  test_enhanced_jwt.py  test_token_expiry.py
test/helpers/: integration.py
test/integration/: test_alias_e2e.py
test/mcp/: README.md  manual_mcp_discovery.py  manual_test_mcp_server.py  test_mcp_alias.py  test_mcp_axis_controls.py  test_mcp_discovery.py  test_mcp_handlers.py  test_mcp_list_images.py  test_mcp_multi_dataset.py  test_mcp_rendering.py  test_mcp_schema.py  test_mcp_server.py  test_mcp_themes.py  test_ping.py  test_proxy_mode.py
test/mcpo/: test_mcpo_openapi.py
test/startup/: __init__.py  test_auth_config_resolver.py
test/storage/: test_alias.py  test_alias_edge_cases.py  test_concurrent_access.py  test_metadata_corruption.py  test_storage_failures.py
test/validation/: test_extreme_values.py
test/web/: README.md  manual_test_web_server.py  test_ping.py  test_ping_web.py  test_proxy_mode_storage_verification.py  test_web_alias.py  test_web_rendering.py  test_web_server.py
