[project]
name = "gplot"
version = "1.0.0"
description = "Graph rendering service with MCP server support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.5.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "fastapi>=0.100.0",
    "starlette>=0.27.0",
    "sse-starlette>=1.6.0",
    "mcp>=0.9.0",
    "PyJWT>=2.8.0",
    "httpx>=0.24.0",
    "pluggy>=1.6.0",
    "pygments>=2.19.2",
    "iniconfig>=2.3.0",
    "mcpo>=0.0.19",
    "requests>=2.32.5",
    "pyright>=1.1.407",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
addopts = "--strict-markers --ignore=test/mcp/manual_test_mcp_server.py --ignore=test/mcp/manual_mcp_discovery.py --ignore=test/web/manual_test_web_server.py"
markers = [
    "mcpo: Tests requiring MCPO wrapper running (use --with-mcpo flag)",
]
filterwarnings = [
    "ignore::RuntimeWarning:matplotlib",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/__pycache__/*",
    "*/test/*",
    "*/tests/*",
    "app/__pycache__/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
